# mplay

./: .gitignore  Cargo.toml
.claude/commands/: index.md  save.md
.claude/hooks/: common.sh  post-tool-use  session-end
Memory/: activeContext.md  projectbrief.md  techEnvironment.md  workflowProtocols.md
src/: config.rs  cover.rs  main.rs  mpris_client.rs
src/ui/: app.rs  mod.rs  widgets.rs
