[package]
name = "mplay"
version = "0.1.0"
edition = "2021"
description = "TUI-based MPRIS music client"
authors = ["Terminal Art Generator"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# MPRIS D-Bus integration
mpris = "2.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"

# Image processing for cover art
image = "0.25"
ratatui-image = "4"

# Utilities
directories = "5.0"
anyhow = "1.0"
urlencoding = "2.1"

# HTTP client for remote cover art
ureq = "2.9"

[profile.release]
lto = true
strip = true
